# SIFT

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: SIFT.cpp  SIFT.hpp  SiftHelper.cpp  SiftHelper.hpp  __SIFT.hpp  main.cpp
